opam-version: "1.2"
version: "0.3"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko"]
license: "ISC"
homepage: "https://github.com/zshipko/ocaml-ezsqlite"
bug-reports: "https://github.com/zshipko/ocaml-ezsqlite/issues"
dev-repo: "https://github.com/zshipko/ocaml-ezsqlite.git"
doc: "https://github.com/zshipko/ocaml-ezsqlite"
build: [
    ["jbuilder" "build" "--only" "ezsqlite" "--root" "." "-j" jobs "@install"]
]
depends: [
    "ocamlfind" {build}
    "ocamlbuild" {build}
    "topkg" {build}
    "hex"
]
available: [ ocaml-version >= "4.03.0" ]
