opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko"]
license: "ISC"
homepage: "https://github.com/zshipko/ocaml-ezsqlite"
bug-reports: "https://github.com/zshipko/ocaml-ezsqlite/issues"
dev-repo: "git+https://github.com/zshipko/ocaml-ezsqlite.git"
doc: "https://zshipko.github.io/ocaml-ezsqlite/doc"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "ocaml" {>= "4.03.0"}
    "dune" {build}
    "hex"
]

synopsis: """
SQLite3 bindings
"""

